
        BOOKKEEPER-487: Add existed hub server settings to configuration template file (sijie via ivank)

        BOOKKEEPER-389: add documentation for message filter. (sijie via ivank)

	BOOKKEEPER-399: Let hub server configure write quorum from ack quorum. (sijie via fpj)

        BOOKKEEPER-342: add documentation for hedwig metadata manager interface. (sijie, ivank via sijie)

      hedwig-client:

        BOOKKEEPER-306: Change C++ client to use gtest for testing (ivank via sijie)

        BOOKKEEPER-334: client-side message filter for java client. (sijie via ivank)

        BOOKKEEPER-335: client-side message filter for cpp client. (sijie via ivank)

        BOOKKEEPER-364: re-factor hedwig java client to support both one-subscription-per-channel and multiplex-subscriptions-per-channel. (sijie via ivank)

        BOOKKEEPER-143: Add SSL support for hedwig cpp client (sijie via ivank)

        BOOKKEEPER-413: Hedwig C++ client: Rename RUN_AS_SSL_MODE to SSL_ENABLED (ivank via sijie)

        BOOKKEEPER-369: re-factor hedwig cpp client to provide better interface to support both one-subscription-per-channel and multiple-subscriptions-per-channel. (sijie via ivank)

        BOOKKEEPER-368: Implementing multiplexing java client. (sijie via ivank)

        BOOKKEEPER-370: implement multiplexing cpp client. (sijie via ivank)

        BOOKKEEPER-453: Extract commonality from MultiplexSubscribeResponseHandler and SimpleSubscribeResponseHandler and put into an abstract class  (sijie via ivank)

        BOOKKEEPER-404: Deprecate non-SubscriptionOptions Subscriber Apis (ivank via sijie)

Release 4.1.0 - 2012-06-07

  Non-backward compatible changes:

    BUGFIXES:

    IMPROVEMENTS:

  Backward compatible changes:

    BUGFIXES:

      BOOKKEEPER-145: Put notice and license file for distributed binaries in SVN (ivank)

      BOOKKEEPER-254: Bump zookeeper version in poms (ivank)

      BOOKKEEPER-72: Fix warnings issued by FindBugs (ivank)
