@@ -43,9 +43,7 @@
       <plugin>
       	<groupId>org.apache.maven.plugins</groupId>
 	<artifactId>maven-surefire-plugin</artifactId>
-	<version>2.9</version>
 	<configuration>
-	  <argLine>-Xmx1G -Djava.net.preferIPv4Stack=true</argLine>
           <systemPropertyVariables>
             <test.latency.file>target/latencyDump.dat</test.latency.file>
           </systemPropertyVariables>
