@@ -233,9 +233,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.9</version>
         <configuration>
-          <argLine>-Xmx1G -Djava.net.preferIPv4Stack=true</argLine>
           <systemPropertyVariables>
             <derby.stream.error.file>target/derby.log</derby.stream.error.file>
             <build.test.dir>target/zk_clientbase_build</build.test.dir>
